<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:defaultValue="@bool/default_for_preference"
        android:summary="@string/summary_on"
        android:summaryOff="@string/summary_off"
        android:key="@string/asser_key"
        android:title="@string/asser_title"
        />
    <SwitchPreferenceCompat
        android:defaultValue="@bool/default_for_preference"
        android:summary="@string/summary_on"
        android:summaryOff="@string/summary_off"
        android:key="@string/cezanne_key"
        android:title="@string/cezanne_title"
        />
    <SwitchPreferenceCompat
        android:defaultValue="@bool/default_for_preference"
        android:summary="@string/summary_on"
        android:summaryOff="@string/summary_off"
        android:key="@string/jlin_key"
        android:title="@string/jlin_title"
        />
    <SwitchPreferenceCompat
        android:defaultValue="@bool/default_for_preference"
        android:summary="@string/summary_on"
        android:summaryOff="@string/summary_off"
        android:key="@string/lyla_key"
        android:title="@string/lyla_title"
        />
    <SwitchPreferenceCompat
        android:defaultValue="@bool/default_for_preference"
        android:summary="@string/summary_on"
        android:summaryOff="@string/summary_off"
        android:key="@string/nikita_key"
        android:title="@string/nikita_title"
        />
</PreferenceScreen>