<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">
    
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        tools:src="@drawable/cezanne"/>
    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:layout_toEndOf="@id/imageView"
        tools:text="@string/cezanne_title"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/authorName"
        android:layout_toEndOf="@id/authorName"
        android:textStyle="italic"
        tools:text="@string/date"/>
    <TextView
        android:id="@+id/authorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorName"
        android:textColor="@color/colorText"
        android:layout_alignLeft="@id/authorName"
        android:layout_alignStart="@id/authorName"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:textSize="14sp"
        android:paddingEnd="8dp"
        tools:text="@string/random_message"/>

</RelativeLayout>